@@ -2,7 +2,7 @@
 %          tex tex4ht-fonts-noncjk
 % or    ht tex tex4ht-fonts-noncjk   
 %
-% Copyright 2009-2017 TeX Users Group
+% Copyright 2009-2018 TeX Users Group
 % Copyright 1997-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -11765,35 +11765,35 @@ htfcss: ipxg-r-t1 font-name: 'ipxg', serif
 .pcrro8r
 htfcss: fveb8r  font-weight: bold;
 >>>
-\AddFont{fveb8r}{alias/adobe/bera/fveb8r}{}
+\AddFont{fveb8r}{alias/bera/fveb8r}{}
 
 \<fver8r\><<<
 .pcrro8r
 >>>
-\AddFont{fver8r}{alias/adobe/bera/fver8r}{}
+\AddFont{fver8r}{alias/bera/fver8r}{}
 
 \<fvero8r\><<<
 .pcrro8r
 htfcss: fvero8r  font-style: italic;
 >>>
-\AddFont{fvero8r}{alias/adobe/bera/fvero8r}{}
+\AddFont{fvero8r}{alias/bera/fvero8r}{}
 
 \<fver8t\><<<
 .lm-ec
 >>>
-\AddFont{fver8t}{alias/adobe/bera/fver8t}{}
+\AddFont{fver8t}{alias/bera/fver8t}{}
 
 \<fveb8t\><<<
 .lm-ec
 htfcss: fveb8t  font-weight: bold;
 >>>
-\AddFont{fveb8t}{alias/adobe/bera/fveb8t}{}
+\AddFont{fveb8t}{alias/bera/fveb8t}{}
 
 \<fvero8t\><<<
 .lm-ec
 htfcss: fvero8t  font-style: italic;
 >>>
-\AddFont{fvero8t}{alias/adobe/bera/fvero8t}{}
+\AddFont{fvero8t}{alias/bera/fvero8t}{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Chapter{Default Htf Fonts}
