@@ -1,8 +1,14 @@
+2018-02-19  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-fonts-noncjk.tex,
+	* Makefile (tex4ht_fonts_noncjk_derived): use /alias/bera/,
+	since it is not an Adobe font.
+
 2018-02-15  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-fonts-noncjk.tex
-	(tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/bera/fve*.htf): Basic support
-	for Bera fonts.
+	(tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/bera/fve*.htf): Basic
+	support for Bera fonts.
 	https://tex.stackexchange.com/q/415418/2891
 
 2018-02-07  Michal Hoftich  <michal.h21@gmail.com>
